2011-10-24  Albert Chu <chu11@llnl.gov>

	* Update documentation with OEM support information.
	
2011-10-21  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/src/: Use unsigned int for cmd_length.

	* common/src/miscutil/conffile.c: Update to latest version.
	
2011-10-21  Albert Chu <chu11@llnl.gov>

	* bmc-info/: Output GUID w/ lower case hex characters, as defined
	in Wired for Management spec.
	
2011-10-20  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/, ipmi-sensors/: Remove unnecessary includes, add
	appropriate ones.

	* bmc-info/: Various code cleanup, use macros when appropriate.
	
2011-10-19  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/src/ipmi-raw.c: Check for valid netfn request input.

	* libfreeipmi/src/api/: Check for valid netfn request input on raw functions.
	
2011-10-19  Albert Chu <chu11@llnl.gov>

	* Global cleanup, consistently and correctly check for errors when
	calling strtol, strtoul, strtod, etc.
	
2011-10-19  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/src/ipmi-raw-argp.c: Fix error message.  Check raw byte
	inputs for correctness.
	
2011-10-19  Albert Chu <chu11@llnl.gov>

	* Document Intel S2600JF/Appro 512X IPMI bugs.
	
2011-10-18  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/, ipmi-oem/: Fix allocation bug due to much larger
	_SC_ARG_MAX on RHEL6.  Assume max args appropriately for each
	tool.

	* ipmi-raw/, ipmi-oem/: Output error when excess arguments
	specified.
	
2011-10-17  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/, libfreeipmi/src/sel-parse/: Fix the assumesystemevent
	workaround.
	
2011-10-17  Albert Chu <chu11@llnl.gov>

	* Support Intel Node Manager sensor/SEL events for Intel
	S2600JF/Appro 512X.
	
2011-10-17  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/util/ipmi-sensor-and-event-code-tables-util.c (get_management_subsystem_health_event_data2_message):
	Fix corner case output bug.
	
2011-10-17  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache-read.c (ipmi_sdr_cache_search_sensor),